kubernetes/services/ttrss.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ttrss
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: ttrss

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ttrss
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ttrss.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: ttrss
          port: 80
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttrss
  namespace: default
  labels:
    app: ttrss
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ttrss
  template:
    metadata:
      labels:
        app: ttrss
    spec:
      containers:
        - name: app
          image: wangqiru/ttrss
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "0.5"
          ports:
            - name: web
              containerPort: 80
